test/tests/errors/error-rhv-var.sm
// true
// false
// false
/**/
/**/

program {
    proc x(y: int) {
        output y;
    }
    var y: ref proc(int) = x;
}